test/parsing/stringLiteralIndex/stringBytesLiteralIndexOOB2.good
stringBytesLiteralIndexOOB2.chpl:1: error: index 10 out of bounds for bytes with length 9
