test/parsing/stringLiteralIndex/stringBytesLiteralIndexOOB2.chpl
writeln(b"Cha \xff pel"[10]);
